# LearnOpenGL

./: .clang-format  .gitignore  CMakeList.txt  CMakeLists.txt  CMakePresets.json
include/: Shader.hpp
include/engine/: Game.hpp  ResourceManager.hpp
src/: Shader.cpp  hellowindow.cpp  main.cpp
src/engine/: Game.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp
